--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,18 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
+
+# Security Configuration
+# Rate Limiting (gunakan Upstash Redis untuk production)
+UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your-redis-token
+
+# Security Features Toggle (default: true)
+SECURITY_ENABLED=true
+RATE_LIMIT_ENABLED=true
+USER_AGENT_BLOCK_ENABLED=true
+PATTERN_DETECTION_ENABLED=true
+
+# IP Whitelist/Blacklist (opsional, pisahkan dengan koma)
+# WHITELISTED_IPS=1.2.3.4,5.6.7.8
+# BLACKLISTED_IPS=9.10.11.12,13.14.15.16
