refactor: remove performance test protection plan and related components
- Deleted the performance test protection plan document.
- Removed pattern detection logic and related functions from the codebase.
- Updated security middleware to focus on rate limiting and user-agent blocking.
- Enhanced rate limiting status endpoint to provide detailed rate limit information.
- Cleaned up user-agent blocking logic and removed unnecessary components.

--- a/.env.example
+++ b/.env.example
@@ -7,17 +7,10 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
 
-# Security Configuration
-# Rate Limiting (gunakan Upstash Redis untuk production)
+# Rate Limiting Configuration
+# Gunakan Upstash Redis untuk production (opsional untuk development)
 UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
 UPSTASH_REDIS_REST_TOKEN=your-redis-token
 
-# Security Features Toggle (default: true)
-SECURITY_ENABLED=true
+# Rate Limiting Toggle (default: true)
 RATE_LIMIT_ENABLED=true
-USER_AGENT_BLOCK_ENABLED=true
-PATTERN_DETECTION_ENABLED=true
-
-# IP Whitelist/Blacklist (opsional, pisahkan dengan koma)
-# WHITELISTED_IPS=1.2.3.4,5.6.7.8
-# BLACKLISTED_IPS=9.10.11.12,13.14.15.16
